OSHMI - Open Substation HMI
    Copyright 2008-2020 - Ricardo L. Olsen 
    (https://www.linkedin.com/in/ricardo-olsen/)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.
    
The system will install to "c:\oshmi\".

Acknowledgements:

  Inkscape - https://inkscape.org
  Inkscape + SAGE - https://sourceforge.net/projects/sage-scada
  Chromium - by "The Chromium Authors"
  Chromium x86 binaries - http://chromium.woolyss.com
  Libiec6150 - https://github.com/mz-automation/libiec61850
  ICCP Client by Fernando Covatti - https://github.com/fcovatti/iccp
  Opendnp3 - https://www.automatak.com/opendnp3/
  Libmodbus - http://libmodbus.org/
  H-OPC - https://github.com/hylasoft-usa/h-opc
  SNAP7/SHARP7 Project by Davide Nardella - http://snap7.sourceforge.net/
  QT - http://www.qt.io
  Lua Language - https://www.lua.org
  GNU Libmicrohttpd: https://www.gnu.org/software/libmicrohttpd
  The Indy Project - http://www.indyproject.org
  FIPS-180-1 compliant SHA-1 implementation by Paul Bakker http://polarssl.org
  NSIS (Nullsoft Scriptable Install System) - http://nsis.sourceforge.net/Main_Page
  Open Sans Fonts by Steve Matteson
  Source Sans Pro by Adobe Systems Incorporated. License - http://scripts.sil.org/OFL
  Google Fonts - https://fonts.google.com/
  JQuery - http://jquery.com
  JQuery UI - http://jqueryui.com
  Shortcut - http://www.openjs.com/scripts/events/keyboard_shortcuts