@@ -9,6 +9,10 @@
 # server ,name     ,HOSTNAME      ,PORT  ,PASSWORD  ,READ_INTERVAL ,AUTOTAG  ,REPORT_INTEGRITY ,BRCB ,URCB
 #server  ,iedName  ,192.168.0.44  ,102   ,          ,10            ,N        ,60               ,Y    ,Y  
 
+# rcb entries (all unmentioned rcbs will be enabled)
+#entry_type   ,PATH                                               ,IntegrityInterval    ,Enabled
+#rcb          ,DemoMeasurement/LLN0.BR.brcb01                     ,90                   ,Y
+
 # desired tag list for the server to be presented to OSHMI
 #entry_type   ,PATH                                              ,FunctionalConstraint ,SUBSCRIBE ,OSHMI_TAG             
 #tag,          IED4_SMVMUnn/MMXU1.AvAPhs.mag.f                   ,MX                   ,N         ,I4-MMXU1.AvAPhs.mag.f 
@@ -21,6 +25,10 @@
 # Connection to InfoTechs's IEC61850 Demo Server
 # server ,name     ,HOSTNAME      ,PORT  ,PASSWORD  ,READ_INTERVAL ,AUTOTAG  ,REPORT_INTEGRITY ,BRCB ,URCB
 server   ,ied1     ,192.168.0.45  ,102   ,          ,10            ,N        ,60               ,Y    ,Y  
+
+#entry_type  ,PATH                                               ,IntegrityInterval    ,Enabled
+rcb          ,DemoMeasurement/LLN0.BR.brcb01                     ,90                   ,Y
+rcb          ,DemoMeasurement/LLN0.BR.brcb02                     ,90                   ,N
 
 #entry_type  ,PATH                                               ,FunctionalConstraint ,SUBSCRIBE ,OSHMI_TAG             
 tag          ,DemoMeasurement/I3pMMXU1.A.phsB.cVal.mag.f         ,MX                   ,N         ,I3pMMXU1.A.phsB.cVal.mag.f
